--- a/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
@@ -20,7 +20,7 @@
                     <li class="dropdown active">
                         @Html.ActionLink("Home", "Index", "Home")
                         <ul>
-                            <li>@Html.ActionLink("Archive", "Index", "Archive")</li>
+                           <li><a href="http://localhost:4200/">Archive</a></li>
                             <li>@Html.ActionLink("Stories", "StoriesIndex", "Story")</li>
                             <li>@Html.ActionLink("Support A Cause", "CauseIndex", "Cause")</li>
                             <li>@Html.ActionLink("Upcoming Events", "EventsIndex", "Event")</li>
@@ -47,10 +47,10 @@
                 <li class="dropdown active">
                     @Html.ActionLink("Home", "Index", "Home")
                     <ul>
-                        <li>@Html.ActionLink("Archive", "Index", "Archive")</li>
+                        <li><a href="http://localhost:4200/">Archive</a></li>
                         <li>@Html.ActionLink("Stories", "StoriesIndex", "Story")</li>
                         <li>@Html.ActionLink("Support A Cause", "SupportCause", "Support")</li>
-                        <li> @Html.ActionLink("Upcoming Events", "UpcomingEvents", "Event")</li>
+                        <li>@Html.ActionLink("Upcoming Events", "UpcomingEvents", "Event")</li>
                     </ul>
                 </li>
                 <li class="dropdown">
