--- a/CommunityKitchen/Views/Archive/Index.cshtml
+++ b/CommunityKitchen/Views/Archive/Index.cshtml
@@ -5,7 +5,7 @@
 @{
     ViewBag.Title = "Index";
 }
-<!DOCTYPE html>
+@*<!DOCTYPE html>
 <html>
   <head>
     <meta http-equiv="refresh" content="0; url='http://localhost:4200/'" />
@@ -13,4 +13,4 @@
   <body>
     <p>Please follow <a href="http://localhost:4200/">this link</a>.</p>
   </body>
-</html>
+</html>*@
