--- a/CommunityKitchen/Views/Item/Index.cshtml
+++ b/CommunityKitchen/Views/Item/Index.cshtml
@@ -3,43 +3,49 @@
 @{
     ViewBag.Title = "Index";
 }
+<!--<div >
+   <button class="btn btn-success m-3" onclick="location.href='@Url.Action("Create", "Item")'">Create New</button>-->
+    @*@Html.ActionLink("Create New", "Create")*@
+<!--</div>-->
 
-<h2>Index</h2>
+<div class="m-3">
+    <button class="btn size5 btn-success" onclick="location.href='@Url.Action("Create", "Item")'">Add New Item</button>
+</div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.ItemName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Quantity)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Price)
-        </th>
-        <th></th>
-    </tr>
+    <table class="table table-hover table-striped ml-5">        
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.ItemName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Quantity)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Price)
+            </th>
+            <th>Actions</th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.ItemName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Quantity)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Price)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ItemName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Quantity)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    <button class="btn btn-success" onclick="location.href='@Url.Action("AddQuantity", "Item", new { id = item.Id })'">+</button>
+                    <button class="btn btn-primary" onclick="location.href='@Url.Action("RemoveQuantity", "Item", new { id = item.Id })'">-</button>
+                    <button class="btn btn-danger" onclick="location.href='@Url.Action("Delete", "Item", new { id = item.Id })'">Delete</button>
 
-</table>
+                </td>
+            </tr>
+        }
+
+
+    </table>
