--- a/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
@@ -1,9 +1,8 @@
 ﻿
 @{
     ViewBag.Title = "_NavBar";
+    var admin = User.Identity.Name;
 }
-
-
 <div class="text-justify col-md-7 d-flex menu-column">
     <nav class="main-menu navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
         <div class="navbar-header">
@@ -17,29 +16,51 @@
         <div class="navbar-collapse collapse clearfix">
             <div class="row">
                 <ul class="navigation clearfix">
-                    <li class="dropdown active">
-                        @Html.ActionLink("Home", "Index", "Home")
-                        <ul>
-                            <li>@Html.ActionLink("Archive", "Index", "Archive")</li>
-                            <li>@Html.ActionLink("Stories", "StoriesIndex", "Story")</li>
-                            <li>@Html.ActionLink("Support A Cause", "CauseIndex", "Cause")</li>
-                            <li>@Html.ActionLink("Upcoming Events", "EventsIndex", "Event")</li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        @Html.ActionLink("Organizer", "Index", "Item")
-                        <ul>
-                            <li>@Html.ActionLink("Manage Inventory", "Index", "Item")</li>
-                            <li>@Html.ActionLink("Organize Event", "OrganizeEvents", "Event")</li>
-                            <li>@Html.ActionLink("Organize Cause", "OrganizeCause", "Cause")</li>
-                        </ul>
-                    </li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="dropdown active">
+                            @Html.ActionLink("Home", "Index", "Home")
+
+                            <ul>
+                                <li>@Html.ActionLink("Archive", "Index", "Archive")</li>
+                                <li>@Html.ActionLink("Stories", "StoriesIndex", "Story")</li>
+                                <li>@Html.ActionLink("Support A Cause", "CauseIndex", "Cause")</li>
+                                <li>@Html.ActionLink("Upcoming Events", "EventsIndex", "Event")</li>
+                            </ul>
+                        </li>
+                    }
+                    else
+                    {
+                        <li class="dropdown active">
+                            @Html.ActionLink("Home", "Index", "Home")
+                        </li>
+                    }
+                    @if (admin == "Admin" || admin == "admin")
+                    {
+                        <li class="dropdown">
+                            @Html.ActionLink("Organizer", "Index", "Item")
+                            <ul>
+                                <li>@Html.ActionLink("Manage Inventory", "Index", "Item")</li>
+                                <li>@Html.ActionLink("Organize Event", "OrganizeEvents", "Event")</li>
+                                <li>@Html.ActionLink("Organize Cause", "OrganizeCause", "Cause")</li>
+                            </ul>
+                        </li>
+                    }
                     <li class="dropdown">
                         @Html.ActionLink("About Us", "About", "Home")
                     </li>
                     <li class="dropdown">
                         @Html.ActionLink("Contact Us", "Contact", "Home")
                     </li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="logoffname" >
+                            Dear - @User.Identity.Name
+                        </li>
+                        <li class="logoff">
+                            @Html.ActionLink("LogOff", "LogOff", "Account")
+                        </li>
+                    }
 
                 </ul>
             </div>
