--- a/CommunityKitchen/Views/Cause/OrganizeCause.cshtml
+++ b/CommunityKitchen/Views/Cause/OrganizeCause.cshtml
@@ -29,7 +29,7 @@
 
                     <div class="content-box">
 
-                        <a href="@Url.Action("CauseDetails","Cause",new {id = @cause.Id})"> <h3>@cause.Title</h3></a>
+                        <a href="@Url.Action("CauseDetails","Cause",new {id = @cause.Id})"> <h3 class="BlueTitle">@cause.Title</h3></a>
                         <ul class="cause-info">
                         </ul>
                         <div class="text">
