--- a/CommunityKitchen/Assets/css/style.css
+++ b/CommunityKitchen/Assets/css/style.css
@@ -6911,7 +6911,7 @@ default-form style-three
 =================================================
 */
 .all-event {
-    padding: 100px 0px 0px;
+    padding: 80px 0px 0px;
 }
 
     .all-event .section-title {
@@ -7226,12 +7226,12 @@ default-form style-three
     color: #fff;
 }
 
-.BlueTitle {
-    color: #ff0000;
+.RedTitle {
+    color: #272727;
     transition: font-size .3s;
 }
 
-    .BlueTitle:hover {
-        color: #f77884;
+    .RedTitle:hover {
+        color: #fe5a5a;
         font-size: 30px;
     }
