--- a/CommunityKitchen/Views/Event/EventDetails.cshtml
+++ b/CommunityKitchen/Views/Event/EventDetails.cshtml
@@ -30,9 +30,9 @@
                 <p>@Model.Description</p>
             </div>
 
-            <div class="form-group">
+            <div>
                 <div>
-                    @Html.ActionLink("Back to List", "EventsIndex")
+                    @Html.ActionLink("Back to List", "OrganizeEvents", "", new {@class= "thm-btn style-1" })
                 </div>
             </div>
 
