--- a/CommunityKitchen/Views/Home/Index.cshtml
+++ b/CommunityKitchen/Views/Home/Index.cshtml
@@ -14,43 +14,6 @@
     <section class="rev_slider_wrapper">
         <div id="slider1" class="rev_slider" data-version="5.0">
             <ul>
-                <li data-transition="fade">
-                    <img src="~/Assets/images/missions/zmp.jpg" alt="" width="1920" height="882" data-bgposition="top center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
-                    <div class="tp-caption  tp-resizeme"
-                         data-x="left" data-hoffset="15"
-                         data-y="top" data-voffset="300"
-                         data-transform_idle="o:1;"
-                         data-transform_in="x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0.01;s:3000;e:Power3.easeOut;"
-                         data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
-                         data-mask_in="x:[100%];y:0;s:inherit;e:inherit;"
-                         data-splitin="none"
-                         data-splitout="none"
-                         data-responsive_offset="on"
-                         data-start="700">
-                        <div class="slide-content-box">
-                            <h4>Thousand of children are waiting for help!</h4>
-                            <h1>help the <span>poor</span> people</h1>
-                            <p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque la<br>udantium, totam rem aperiam eaque ipsa, quae ab illo inventore </p>
-                        </div>
-                    </div>
-                    <div class="tp-caption tp-resizeme"
-                         data-x="left" data-hoffset="15"
-                         data-y="top" data-voffset="500"
-                         data-transform_idle="o:1;"
-                         data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
-                         data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
-                         data-splitin="none"
-                         data-splitout="none"
-                         data-responsive_offset="on"
-                         data-start="2300">
-                        <div class="slide-content-box">
-                            <div class="button">
-                                <a class="thm-btn" href="#">join with us today</a>
-                            </div>
-                        </div>
-                    </div>
-
-                </li>
 
                 <li data-transition="fade">
                     <img src="~/Assets/images/missions/zmp.jpg" alt="" width="1920" height="882" data-bgposition="top center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="1">
@@ -69,7 +32,7 @@
                          data-start="500">
                         <div class="slide-content-box center">
                             <h4>Thousand of children are waiting for help!</h4>
-                            <h1>help the <span>poor</span> people</h1>
+                            <h1><span>help</span> those in <span>need</span></h1>
                             <p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque la<br>udantium, totam rem aperiam eaque ipsa, quae ab illo inventore </p>
                         </div>
                     </div>
@@ -109,7 +72,7 @@
                          data-start="500">
                         <div class="slide-content-box center">
                             <h4>Thousand of children are waiting for help!</h4>
-                            <h1>help the <span>poor</span> people</h1>
+                            <h1>help those in <span>need</span></h1>
                             <p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque la<br>udantium, totam rem aperiam eaque ipsa, quae ab illo inventore </p>
                         </div>
                     </div>
