--- a/CommunityKitchen/Views/Item/Index.cshtml
+++ b/CommunityKitchen/Views/Item/Index.cshtml
@@ -9,7 +9,7 @@
 <!--</div>-->
 
 <div class="m-3">
-    <button class="btn size5 btn-success" onclick="location.href='@Url.Action("Create", "Item")'">Add New Item</button>
+    <button class="btn size5 ml-4 btn-success" onclick="location.href='@Url.Action("Create", "Item")'">Add New Item</button>
 </div>
 
     <table class="table table-hover table-striped ml-5">        
