--- a/CommunityKitchen/Views/Shared/Components/_SearchBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_SearchBar.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "_SearchBar";
 }
 
-<div class="right-column">
+@*<div class="right-column">
     <div class="right-area">
         <div class="nav_side_content">
             <div class="search_option">
@@ -15,4 +15,4 @@
             </div>
         </div>
     </div>
-</div>
+</div>*@
