Fix Login kai navbar

--- a/CommunityKitchen/Views/Shared/_Layout.cshtml
+++ b/CommunityKitchen/Views/Shared/_Layout.cshtml
@@ -20,7 +20,8 @@
     <script src="~/Scripts/MetaLogin.js"></script>
     <div class="container23">
         <div class="col-mb-12">
-            <section class="theme_menu stricky" style="background-color:#333;  background-repeat: no-repeat; background-size:cover; ">
+            @Html.Partial("~/Views/Shared/Components/_Header.cshtml")
+            <section class="theme_menu stricky" style="  background-repeat: no-repeat; background-size:cover; ">
                 <div class="container">
                     <div class="row">
                         @Html.Partial("~/Views/Shared/Components/_LogoMain.cshtml")
