--- a/CommunityKitchen/Views/Cause/CauseDonate.cshtml
+++ b/CommunityKitchen/Views/Cause/CauseDonate.cshtml
@@ -66,14 +66,16 @@
                             <div class="col-md-12 col-sm-12 col-xs-12">
 
                                 <div class="form-group style-three">
-                                    <input id="foo" type="text" name="form_name" class="form-control" value="" placeholder="20€" required="">
-                                    <input id="koo" type="hidden" name="name" value="@Model.Id" />
+                                    <input id="paymentValue" type="text" name="form_name" class="form-control" value="" placeholder="20€" required="">
+                                    <input id="causeId" type="hidden" name="name" value="@Model.Id" />
                                 </div>
 
                             </div>
                             <div class="col-md-12 col-sm-12 col-xs-12">
+                                <div id="paypal-button-container">
+                                    @*//edw paypal koumpia*@
 
-                                <div id="paypal-button-container"></div>
+                                </div>
                             </div>
 
                         </div>
@@ -121,15 +123,14 @@
         <script src="https://www.paypal.com/sdk/js?client-id=AV42MDljTyYz4PnD2iB4Kbjcxy7NF1Lena85f8qW3M_hCHuxRX1LHg4y04IU9Khq8qH1eCCEnYnZNUIM"></script>
         <script>
 
-            //console.log("paypal eisaiedwreBRO??")
-
+           
             paypal.Buttons({
                 createOrder: function (data, actions) {
                     // This function sets up the details of the transaction, including the amount and line item details.
                     return actions.order.create({
                         purchase_units: [{
                             amount: {
-                                value: document.getElementById("foo").value
+                                value: document.getElementById("paymentValue").value
                             }
                         }]
                     });
@@ -138,26 +139,31 @@
                     // This function captures the funds from the transaction.
                     return actions.order.capture().then(function (details) {
                                 // This function shows a transaction success message to your buyer.
-                              alert('Transaction completed by ' + details.payer.name.given_name);
-                          //console.log(data);
+                             // alert('Transaction completed by ' + details.payer.name.given_name);
+                          // console.log(data);
                         //console.log(actions);
+                        console.log(details);
 
-                    }).then(callAjax());
+                    }).then(callAjax()).then(window.location.reload());
                 }
-            }).render('#paypal-button-container');
-                        //This function displays payment buttons on your web page.
+            }).render('#paypal-button-container'); //This function displays payment buttons on your web page.
+                        
 
             function callAjax() {
 
                 //-----------------------------malakies xazes vlakeis AISXOS
+
+                var id = document.getElementById("causeId").value;
+                var payAmount = document.getElementById("paymentValue").value;
+                
                 $.ajax({
                     type: "put",
                     url: "@Url.Action("EditCauseJson","Cause")",
-                    data: JSON.stringify({ "Id": document.getElementById("koo").value, "amount": document.getElementById("foo").value }),
+                    data: JSON.stringify({ "Id": id , "amount": payAmount  }),
                     contentType: "application/json; charset=utf-8",
                     dataType: "json",
                     success: function () {
-                        console.log("to console log den douleyei edw pera ... kai oute kai to alert aop katw")
+                        console.log(" ****** to console log den douleyei edw pera ... kai oute kai to alert aop katw ^^^^^")
                         alert("Successfully Donated To Cause");
                         console.log(editedCause);
                     },
