--- a/CommunityKitchen/Views/Event/EventsIndex.cshtml
+++ b/CommunityKitchen/Views/Event/EventsIndex.cshtml
@@ -23,44 +23,93 @@
                         <img src="~/Assets/Selection/events1.jpg" />
                         <div class="overlay">
                             <div class="box">
-                                
+
                             </div>
                         </div>
                     </div>
 
-                   
+                    @* align-content *@
+                    @* align-items *@
+                    @* justify-content *@
+                    @* justify-items *@
                     <div class="content-box">
                         @foreach (var eve in Model.OrderBy(x => x.EventDate))
                         {
 
                             if (eve.EventDate >= DateTime.Now)
                             {
-                                <div class="title-area">
 
-                                    <div class="date">@eve.EventDate.Day<br><span>@eve.EventDate.ToString("MMM")</span></div>
-                                    <a href="@Url.Action("EventDetails","Event",new {id = @eve.Id})"> <h3 class="RedTitle">@eve.Title</h3></a>
+
+                                <div class="title-area ">
+                                    <div class="flex-container;">
+
+
+                                        @if (eve.Photo == null)
+                                        {
+                                            <div style="display:hidden"></div>
+                                        }
+                                        else
+                                        {
+                                            <div>
+                                                <img style="border-radius: 50px; height: 432px; width: 768px; object-fit: contain; " src="~/Assets/images/ImagesSaved/@eve.Photo" alt="Defortwse re mLKAIA Text" />
+                                            </div>
+                                        }
+
+                                        <div>
+                                            <a href="@Url.Action("EventDetails","Event",new {id = @eve.Id})"> <h3 class="RedTitle">@eve.Title</h3></a>
+                                        </div>
+
+
+                                        <div class="date">
+                                            @eve.EventDate.Day<br><span>@eve.EventDate.ToString("MMM")</span>
+                                        </div>
+                                    </div>
+
+
+
                                     <ul class="event-info">
-                                        <li><span class="fa fa-calendar"></span> @eve.EventDate.ToLongDateString()</li>
-                                        <li> &emsp; <span class="fa fa-map-marker"></span>@eve.Address</li>
+                                        <li><span class="fa fa-calendar"></span> <span style="color: #fe5a5a ">@eve.EventDate.ToLongDateString()</span></li>
+                                        <li> &emsp; <span class="fa fa-map-marker"></span> <span style="color: #fe5a5a ">@eve.Address</span></li>
                                     </ul>
 
-                                    <div class="text">
-                                        <p>@eve.Description</p>
-                                    </div>
-                                    
+                                    @if (eve.Description.Length > 1500)
+                                    {
+                                        <div class="flex-container">
+                                            <div style="overflow: auto; scrollbar-face-color:brown; scrollbar-base-color:white; width: 768px; height: 400px; background-color: #f5e5d0; ">@eve.Description</div>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div class="flex-container">
+                                            <div style=" width: 768px; height: auto; background-color: #f5e5d0; ">@eve.Description</div>
+                                        </div>
+                                    }
+
+
 
                                 </div>
                             }
                         }
 
-                     </div>
-                    
+                    </div>
+
                 </div>
             </div>
         </div>
     </div>
 
+
 </section>
+
+@section scripts{
+
+    <script>
+
+
+    </script>
+
+}
+
 
 @*@section scripts{
 
