--- a/CommunityKitchen/Views/Event/OrganizeEvents.cshtml
+++ b/CommunityKitchen/Views/Event/OrganizeEvents.cshtml
@@ -28,24 +28,55 @@
                     @foreach (var eve in Model)
                     {
 
-                        <div class="content-box">
+                    <div class="content-box">
 
-                            <a href="@Url.Action("EventDetails","Event",new {id = @eve.Id})"> <h3 class="RedTitle">@eve.Title</h3></a>
-                            <ul class="event-info">
-                                <li><span class="fa fa-calendar"></span> @eve.EventDate.ToLongDateString()</li>
-                                <li> &emsp; <span class="fa fa-map-marker"></span>@eve.Address</li>
-                                
-                            </ul>
-                            <div class="text">
-                                <p>@eve.Description</p>
-                            </div>
-                            <div>
-                                <span><a href="@Url.Action("EditEvent","Event",new {id = @eve.Id})" class="thm-btn style-2">Edit Event</a><a href="@Url.Action("DeleteEvent","Event",new {id = @eve.Id})" class="thm-btn style-2">Delete  Event</a></span>
-                            </div>
-                            <div>
-                                <img src="~/Assets/images/ImagesSaved/" + @eve.Photo/>
-                            </div>
+                        <a href="@Url.Action("EventDetails","Event",new {id = @eve.Id})"> <h3 class="RedTitle">@eve.Title</h3></a>
+                        <ul class="event-info">
+                            <li>
+                                <span class="fa fa-calendar"></span>
+                                <span style="color: red ">
+                                    @eve.EventDate.ToLongDateString()
+                                </span>
+                            </li>
+                            <li>
+                                &emsp; <span class="fa fa-map-marker"> </span>
+                                <span style="color: red ">
+                                    @eve.Address
+                                </span>
+                            </li>
+
+                        </ul>
+                        <div class="p-2">
+                            <span>
+                                <a href="@Url.Action("EditEvent","Event",new {id = @eve.Id})" class="thm-btn style-2">Edit Event</a>
+                                <a href="@Url.Action("DeleteEvent","Event",new {id = @eve.Id})" class="thm-btn style-1">Delete  Event</a>
+                            </span>
                         </div>
+
+                        @if (eve.Photo == null)
+                        {
+                            <div style="display:hidden"></div>
+                        }
+                        else
+                        {
+                            <div class="p-3">
+                                <img style="border-radius: 15px; height: 432px; width: 768px; object-fit: contain; " src="~/Assets/images/ImagesSaved/@eve.Photo" alt="Defortwse re mLKAIA Text" />
+                            </div>
+                        }
+
+                        @if (eve.Description.Length > 1500)
+                        {
+                            <div class="flex-container">
+                                <div style="overflow: auto; width: 795px; height: 400px; background-color: #f5e5d0; ">@eve.Description</div>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="flex-container">
+                                <div style=" width: 768px; height: auto; background-color: #f5e5d0; ">@eve.Description</div>
+                            </div>
+                        }
+                    </div>
                     }
 
                 </div>
