--- a/CommunityKitchen/Views/Item/Index.cshtml
+++ b/CommunityKitchen/Views/Item/Index.cshtml
@@ -3,49 +3,58 @@
 @{
     ViewBag.Title = "Index";
 }
-<!--<div >
-   <button class="btn btn-success m-3" onclick="location.href='@Url.Action("Create", "Item")'">Create New</button>-->
-    @*@Html.ActionLink("Create New", "Create")*@
-<!--</div>-->
 
-<div class="m-3">
-    <button class="btn size5 ml-4 btn-success" onclick="location.href='@Url.Action("Create", "Item")'">Add New Item</button>
-</div>
-
-    <table class="table table-hover table-striped ml-5">        
+<div class="container">
+    <table class="table table-hover table-striped ml-5">
+        <tr class="col-12">
+            <th class="m-3">
+                <button class="btn size5 btn-success" onclick="location.href='@Url.Action("Create", "Item")'">Add New Item</button>
+            </th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>
         <tr>
-            <th>
+            <th class="col-3" style="text-align:center">
                 @Html.DisplayNameFor(model => model.ItemName)
             </th>
-            <th>
+            <th class="col-1" style="text-align:center">
                 @Html.DisplayNameFor(model => model.Quantity)
             </th>
-            <th>
+            <th class="col-1" style="text-align:center">
+                Update Quantity
+            </th>
+            <th class="col-1" style="text-align:center">
                 @Html.DisplayNameFor(model => model.Price)
             </th>
-            <th>Actions</th>
+            <th class="col-1" style="text-align:center">
+                Actions
+            </th>
         </tr>
 
         @foreach (var item in Model)
         {
             <tr>
-                <td>
+                <td class="col-3">
                     @Html.DisplayFor(modelItem => item.ItemName)
                 </td>
-                <td>
+                <td class="col-1" style="text-align:center">
                     @Html.DisplayFor(modelItem => item.Quantity)
                 </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Price)
-                </td>
-                <td>
+                <td class="col-1" style="text-align:center">
                     <button class="btn btn-success" onclick="location.href='@Url.Action("AddQuantity", "Item", new { id = item.Id })'">+</button>
                     <button class="btn btn-primary" onclick="location.href='@Url.Action("RemoveQuantity", "Item", new { id = item.Id })'">-</button>
+                </td>
+                <td class="col-1" style="text-align:center">
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td class="col-1" style="text-align:center">
                     <button class="btn btn-danger" onclick="location.href='@Url.Action("Delete", "Item", new { id = item.Id })'">Delete</button>
-
                 </td>
             </tr>
         }
 
 
     </table>
+</div>
