--- a/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_NavBar.cshtml
@@ -18,7 +18,7 @@
                 <ul class="navigation clearfix">
 
                     
-                        <li class="dropdown active">
+                        <li class="dropdown">
                             @Html.ActionLink("Home", "Index", "Home")
 
                             <ul>
