--- a/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
+++ b/CommunityKitchen/Views/Shared/Components/_LogIn.cshtml
@@ -63,7 +63,7 @@
                     <img src="https://img.icons8.com/ios-glyphs/30/000000/password--v1.png" />
                 </div>
 
-                <label class="remeber"><input type="checkbox"  name="RememberMe">Remember me</label>
+                <label class="remeber"><input type="checkbox" value="true"  name="RememberMe">Remember me</label>
 
                 <div class="inputBx">
                     <input id="sub" type="submit" value="Login">
