--- a/CommunityKitchen/Views/Shared/_Layout.cshtml
+++ b/CommunityKitchen/Views/Shared/_Layout.cshtml
@@ -81,6 +81,7 @@
         <script src="~/Assets/js/custom.js"></script>
         <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
         <script src="~/Scripts/LoginRegister.js"></script>
+        <script src="~/Scripts/ChartPie.js"></script>
     </div>
     @Html.Partial("~/Views/Shared/Components/_LogIn.cshtml")
 
