--- a/CommunityKitchen/Views/Home/Index.cshtml
+++ b/CommunityKitchen/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+    </script>
 </head>
 <body>
 
@@ -233,15 +233,12 @@
                     </div>
                     <div class="col-md-6">
                         <div class="item">
-                            <div class="image-box">
-                                <img src="~/Assets/images/feature/4.png" alt="">
+                            <div>
+
+                                <img class="imgpie" src="~/Assets/images/feature/24.png" />
+                                <canvas id="myChart"></canvas>
                             </div>
-                            <ul class="list">
-                                <li><i class="icon flaticon-stop"></i>Food Donation</li>
-                                <li><i class="icon flaticon-stop"></i>Educational Fund</li>
-                                <li><i class="icon flaticon-stop"></i>Health Donation</li>
-                                <li><i class="icon flaticon-stop"></i>Building Shelter</li>
-                            </ul>
+
                         </div>
 
                     </div>
@@ -452,9 +449,6 @@
         </div>
     </section>
     <!--end our-team-->
-
-
-
 
 </body>
 </html>
