--- a/CommunityKitchen/Views/Shared/_Layout.cshtml
+++ b/CommunityKitchen/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <link href="~/Assets/images/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180" />
     <link rel="icon" type="image/png" href="~/Assets/images/favicon/favicon-32x32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="~/Assets/images/favicon/favicon-16x16.png" sizes="16x16">
-
+    <link href="~/Assets/fonts/flaticon.css" rel="stylesheet" />
 </head>
 <body>
     <script src="~/Scripts/MetaLogin.js"></script>
