--- a/CommunityKitchen/Views/Cause/DeleteCause.cshtml
+++ b/CommunityKitchen/Views/Cause/DeleteCause.cshtml
@@ -4,69 +4,72 @@
     ViewBag.Title = "DeleteCause";
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Cause</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Photo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Photo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TargetGoal)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TargetGoal)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CurrentAmmount)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CurrentAmmount)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ModeratorId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ModeratorId)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "OrganizeCause")
+<div class="default-form-area" style="display: flex; justify-content: center">
+    <div id="contact-form" class="default-form">
+        <div class="section-title">
+            <h1 style="margin-left:45px">Are you sure you want to <span>delete</span> this Cause?</h1>
         </div>
-    }
+        <div class="row clearfix" style="justify-content: center">
+            <div class="col-md-12 col-sm-12 col-xs-6">
+                <hr />
+                <div class="form-group">
+                    <div class="section-title">
+                        <h2>Title</h2>
+                    </div>
+                    @Html.DisplayFor(model => model.Title)
+                </div>
+
+                <div class="form-group">
+                    <div class="section-title">
+                        <h2>Description</h2>
+                    </div>
+                    @Html.DisplayFor(model => model.Description)
+                </div>
+
+                <div class="form-group">
+                    <div class="section-title">
+                        <h2>Photo</h2>
+                    </div>
+                    @Html.DisplayFor(model => model.Photo)
+                </div>
+
+                <div class="form-group">
+                    <div class="section-title">
+                        <h2>Target Goal</h2>
+                    </div>
+                    @Html.DisplayFor(model => model.TargetGoal)
+                </div>
+
+                <div class="form-group">
+                    <div class="section-title">
+                        <h2>Current Amount</h2>
+                    </div>
+                    @Html.DisplayFor(model => model.CurrentAmmount)
+                </div>
+
+                @*<div class="form-group">
+                    <div class="section-title">
+                        <h2>ModeratorId</h2>
+                    </div>
+                    @Html.DisplayFor(model => model.ModeratorId)
+                </div>*@
+                <div class="form-group">
+                    <div>
+                        <input type="submit" value="Delete" class="thm-btn style-1" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    @using (Html.BeginForm())
+                    {
+                        @Html.AntiForgeryToken()
+
+                        <div>
+
+                            @Html.ActionLink("Back to List", "OrganizeCause")
+                        </div>
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
