--- a/CommunityKitchen/Views/Event/CreateEvent.cshtml
+++ b/CommunityKitchen/Views/Event/CreateEvent.cshtml
@@ -11,9 +11,9 @@
     @Html.AntiForgeryToken()
     <div class="default-form-area" style="display: flex; justify-content: center">
         <div id="contact-form" class="default-form">
+            <h1 style="margin-left:150px;">Creating Event</h1>
             <div class="row clearfix" style="justify-content: center">
-                <h1 style="justify-content:center">Creating Event</h1>
-                <div class="col-md-10 col-sm-12 col-xs-6">
+                <div class="col-md-8 col-sm-12 col-xs-6">
                     <hr />
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
